[tool.poetry]
name = "pyqualtrics"
version = "0.1.0"
description = "A python wrapper for the Qualtrics API"
authors = ["Drew J. Sonne <drew.sonne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
